--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1 id="display-area"></h1>
-    <script src="object.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
